# cleaneeg

./: LICENSE  README.md  autoclean_rseeg.ipynb  cleaneeg.py  cleaneeg_gui.ui  environment.yml  get_sample_data.py  pyproject.toml  requirements.txt
cleaneeg/: autoclean_rseeg.ipynb  cleaneeg.py  cleaneeg_gui.py  cleaneeg_interface.ui  cleaneeg_tutorial.ipynb  get_sample_data.py  tutorial.ipynb
