[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name            = "cleaneeg"
version         = "0.1.0"
description     = "Automated, end-to-end EEG preprocessing and artifact-removal toolkit for Python"
readme          = "README.md"
requires-python = ">=3.9"
license         = {file = "LICENSE"}
authors = [
  {name = "Amin Kabir", email = "aminkabir92@gmail.com"}
]
keywords = ["eeg", "mne", "signal-processing", "gui"]

dependencies = [
  "numpy==1.26.4",
  "scipy>=1.10.0",
  "matplotlib>=3.6.0",
  "PyQt5>=5.15.0",
  "mne==1.5.0",
  "mne-icalabel==0.5.0",
  "pyriemann==0.3",
  "pyprep>=0.4.0",
  "meegkit>=0.1.5",
  "pybv>=0.7.0",
  "eeglabio>=0.0.2",
  "edfio>=0.1.0",
  "EDFlib-Python>=1.0.8",
  "h5py>=3.7.0",
  "pandas>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/aminkabir/cleaneeg"
Issues   = "https://github.com/aminkabir/cleaneeg/issues"

[project.scripts]
cleaneeg = "cleaneeg.__main__:launch_gui"

[tool.setuptools.package-data]
"cleaneeg" = ["*.ui", "*.png", "*.svg", "*.json"]
